# airacle

./: README.md  app.py  index.html  pyproject.toml  requirements.txt
contracts/: airdrop.sol  bot.sol  nobots_token.sol
experiments/: address.py  address_fetcher.py  blockchain_analyzer.py  blockchain_data_fetcher.py  community_detector.py  erc20_transfer.py  erc721_transfer.py  graph_builder.py  graph_visualizer.py  native_token_transfer.py  transfer_collection.py
farm_detection/: address_fetcher.py  blockchain_analyzer.py  blockchain_data_fetcher.py  community_detector.py  erc20_transfer.py  erc721_transfer.py  graph_builder.py  graph_visualizer.py  native_token_transfer.py  transfer.py  transfer_collection.py
